--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,4 +11,48 @@
         <h1>{{title}}</h1>
     </header>
 </body>
-</html>
+</html> -->
+{% extends 'base.html'%}
+{% import 'macros.html' as macro %}
+
+{% block content %}
+    
+        <div  class="container" id="particles-js">
+                <h2 class="text-center" id="posts">All Pitches</h2>
+            <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
+                <li class="nav-item" >
+                    <a id ="cats" class="nav-link" data-toggle="tab" href="#all"><strong>All Pitches</strong> </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id ="cats" data-toggle="tab" href="#love">Love Pitches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id ="cats" data-toggle="tab" href="#business">Business Pitches</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id ="cats"data-toggle="tab" href="#interview">Interview Pitches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id ="cats"data-toggle="tab" href="#promotion">Interview Pitches</a>
+                  </li>
+            </ul>
+            <div class="tab-content">
+                <div  class="container tab-pane active" id="all"><br>
+                    {{ macro.display(pitches) }}
+                </div>
+                <div  class="container tab-pane fade" id="event"><br>
+                    {{ macro.display(love)}}
+                </div>
+                <div  class="container tab-pane fade" id="jobs"><br>
+                    {{ macro.display(business) }}
+                </div>
+                <div  class="container tab-pane fade" id="ads"><br>
+                    {{ macro.display(interview) }}
+                </div>
+                <div  class="container tab-pane fade" id="ads"><br>
+                    {{ macro.display(promotion) }}
+                    
+                </div>
+            </div>
+        </div>
+{% endblock%}
