--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,1 +1,47 @@
 
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>  
+            <a class="navbar-brand" href="/">Pitches</a> 
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li> <a href="/">Home</a> </li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="nav navbar-nav navbar-center">
+        <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
+            <li class="nav-item" >
+                <a id ="cats" class="nav-link" data-toggle="tab" href="#all"><strong>All Pitches</strong> </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id ="cats" data-toggle="tab" href="#love">Love Pitches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id ="cats" data-toggle="tab" href="#business">Business Pitches</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id ="cats"data-toggle="tab" href="#interview">Interview Pitches</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id ="cats"data-toggle="tab" href="#promotion">Interview Pitches</a>
+              </li>
+        </ul>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+        {% if current_user.is_authenticated %}
+        <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
+        <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+        {% else %}
+        <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
+        {%endif%}
+    </ul>
+</div>
