--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,43 +16,22 @@
 {% import 'macros.html' as macro %}
 
 {% block content %}
-    
-        <div  class="container" id="particles-js">
-                <h2 class="text-center" id="posts">All Pitches</h2>
-            <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
-                <li class="nav-item" >
-                    <a id ="cats" class="nav-link" data-toggle="tab" href="#all"><strong>All Pitches</strong> </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id ="cats" data-toggle="tab" href="#love">Love Pitches</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id ="cats" data-toggle="tab" href="#business">Business Pitches</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id ="cats"data-toggle="tab" href="#interview">Interview Pitches</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id ="cats"data-toggle="tab" href="#promotion">Interview Pitches</a>
-                  </li>
-            </ul>
+
             <div class="tab-content">
                 <div  class="container tab-pane active" id="all"><br>
                     {{ macro.display(pitches) }}
                 </div>
-                <div  class="container tab-pane fade" id="event"><br>
+                <div  class="container tab-pane fade" id="love"><br>
                     {{ macro.display(love)}}
                 </div>
-                <div  class="container tab-pane fade" id="jobs"><br>
+                <div  class="container tab-pane fade" id="business"><br>
                     {{ macro.display(business) }}
                 </div>
-                <div  class="container tab-pane fade" id="ads"><br>
+                <div  class="container tab-pane fade" id="interview"><br>
                     {{ macro.display(interview) }}
                 </div>
-                <div  class="container tab-pane fade" id="ads"><br>
-                    {{ macro.display(promotion) }}
-                    
+                <div  class="container tab-pane fade" id="promotion"><br>
+                    {{ macro.display(promotion) }} 
                 </div>
             </div>
-        </div>
 {% endblock%}
