--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         {% if pitches %}
-        {% for category in piches %}
+        {% for category in pitches %}
         <div class="col-md-4">
             <div class="thumbnail" id="carded">
                 <h5 class="card-header">{{category.title}}</h5>
@@ -32,7 +32,7 @@
         <div class="card w-90 mb-3">
             <div class="card-body">
 
-                <p class="card-title">Category Has 0 posts</p>
+                <p class="card-title">Category More Pitches To this category</p>
             </div>
         </div>
         {% endif %}
