added tables for upvote and downvotes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,8 +4,8 @@
     {% include 'navbar.html' %}
 {% endblock %}
 
-{%block styles %}
+<!-- {%block styles %}
   {{super()}}
 
 {% endblock %}
-
+ -->
