--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,22 +1,9 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pithch app</title>
-</head>
-<body>
-    <header>
-        <h1>{{title}}</h1>
-    </header>
-</body>
-</html> -->
+
 {% extends 'base.html'%}
 {% import 'macros.html' as macro %}
 
 {% block content %}
-
+            <h1>{{header}}</h1>
             <div class="tab-content">
                 <div  class="container tab-pane active" id="all"><br>
                     {{ macro.display(pitches) }}
