--- a/app/templates/new_pitch.html
+++ b/app/templates/new_pitch.html
@@ -1,15 +1,27 @@
-{% extends 'base.html'%}
-{% import 'bootstrap/wtf.html' as wtf %}
 
+
+{% import 'bootstrap/wtf.html' as wtf %}
+{% extends 'bootstrap/base.html' %}
 
 {% block content %}
-            <div class=" row" >
-                    <div class="col-md-2"></div>
-                    <div class="col-md-8" id="postform">
-                        <h2 class="text-center">Add Pitches</h2>
-                        {{wtf.quick_form(form)}}
-                    </div>
-                    <div class="col-md-2"></div>
-            </div>
-   
-{% endblock%}
+<div class="container">
+    <div class="row">
+        <div class="jumbotron">
+            {{wtf.quick_form(form)}}
+            <ul style="list-style: none;">
+                {% for pitch in pitches %}
+                <div class="list-group">
+                    <a href="#">
+                        <div class="list-item">
+                            <p>{{pitch.id}}</p>
+                        </div>
+                        <h4>{{ pitch.description }}</h4>
+                        <h6> Posted by {{user.username}}.</h6>
+                    </a>
+                </div>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
+{% endblock %}
