--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -1,58 +1,13 @@
-<!-- {% extends 'base.html'%}
-{% import 'bootstrap/wtf.html' as wtf %}
-
-{% block content %}
-<div class="container" id="allcomments">
-    <div class="row">
-
-        {% if all_comments %}
-        <div class="col-md-7">
-            <h3 class="text-center" id="coms">All comments for the post</h3>
-            {% for comment in all_comments %}
-            <div class="card w-90 mb-3">
-                <div class="card-body">
-                    <h5>{{comment.pitch.title}}</h5>
-                    <p class="card-title">{{ comment.comment }}</p>
-                    <p class="card-text">--- {{comment.user.username}}</p>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        <div class="col-md-5  commentform">
-
-            {{wtf.quick_form(form)}}
-        </div>
-    </div>
-    {%else%}
-    <div class="card w-90 mb-3">
-        <div class="card-body">
-            <p class="card-title">No Comments for this yet for this post. Be the first to comment</p>
-        </div>
-    </div>
-    <div class="col-md-5">
-        {{wtf.quick_form(form)}}
-    </div>
-    {%endif%}
-</div>
-
-{% endblock%} -->
-
-{% include 'navbar.html'%}
-
-{% import 'bootstrap/wtf.html' as wtf %}
 {% extends 'bootstrap/base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 {% import 'macros.html' as macro %}
 
 {% block content %}
-
-
-
-
 <div class="row">
     <div class="card">
         <div class="card-body text-center">
             <h4><a>{{pitch.title}}</a></h4>
-            <h5 class="card-text text-center">{{pitch.post_pitch}}.</h5>
+            <h5 class="card-text text-center">{{pitch.description}}.</h5>
         </div>
     </div>
     <div class="container">
@@ -62,7 +17,6 @@
             </div>
         </div>
     </div>
-    <hr>
     <hr>
     <div class="container">
         <div class="col-md-12">
