display pitches sccording to catgories

--- a/app/templates/interview.html
+++ b/app/templates/interview.html
@@ -4,12 +4,12 @@
 {%block content%}
 <div class="jumbotron jumbotron-fluid">
     <div class="container text-center">
-      <h2 class="card-title h1-responsive font-bold">Education Pitches</h2>
+      <h2 class="card-title h1-responsive font-bold">Interview Pitches</h2>
     </div>
   </div>
     <hr>
     <div class="row">
-        {{macro.displayPitches(education)}}
+        {{macro.displayPitches(interview)}}
     </div>
 </div>
 {%endblock%}
