--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -1,8 +1,11 @@
-{% extends 'bootstrap/base.html' %}
+{% include 'navbar.html'%}
+
 {% import 'bootstrap/wtf.html' as wtf %}
+{% extends 'bootstrap/base.html' %}
 {% import 'macros.html' as macro %}
 
 {% block content %}
+
 <div class="row">
     <div class="card">
         <div class="card-body text-center">
@@ -28,5 +31,8 @@
     </div>
 
 </div>
+
+
+
 
 {% endblock %}
