--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,22 +11,22 @@
 
 {% block content %}
     <div class="container">
-            <h1>{{header}}</h1>
-
-          <div id="interview" class="container tab-pane fade" style="font-family: Vioda Libre;"><br>
+          <div class="container tab-pane fade" style="font-family: Vioda Libre;">
             {{ macro.display(love) }}
-          </div>
-        <div id="interview" class="container tab-pane fade" style="font-family: Vioda Libre;"><br>
+          </div><br>
+        <div class="container tab-pane fade" style="font-family: Vioda Libre;">
           {{ macro.display(business) }}
-        </div>
-        <div id="pickupline" class="container tab-pane fade" style="font-family: Vioda Libre;" ><br>
+        </div><br>
+        <div class="container tab-pane fade" style="font-family: Vioda Libre;" >
           {{ macro.display(interview)}}
-        </div>
-        <div id="promotion" class="container tab-pane fade" style="font-family: Vioda Libre;" ><br>
+        </div><br>
+        <div class="container tab-pane fade" style="font-family: Vioda Libre;" >
           {{ macro.display(promotion) }}
-        </div>
-        <div id="promotion" class="container tab-pane fade" style="font-family: Vioda Libre;" ><br>
+        </div><br>
+        
+        <div class="container tab-pane fade" style="font-family: Vioda Libre;" >
             {{ macro.display(education) }}
           </div>
       </div>
+     
 {% endblock %}
