--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -2,26 +2,20 @@
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
+            <h1>{{title}}</h1>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
-                <!-- <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span> -->
             </button>  
             <a class="navbar-brand" href="/">Pitches</a> 
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li> <a href="/">Home</a> </li>
+                <li> <a href="/">All Pitches</a> </li>
             </ul>
         </div>
-
     </div>
     <div class="nav navbar-nav navbar-center">
         <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
-            <li class="nav-item" >
-                <a id ="cats" class="nav-link" data-toggle="tab" href="#all"><strong>All Pitches</strong> </a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" id ="cats" data-toggle="tab" href="#love">Love Pitches</a>
             </li>
@@ -34,7 +28,9 @@
             <li class="nav-item">
                 <a class="nav-link" id ="cats"data-toggle="tab" href="#promotion">Promotion Pitches</a>
               </li>
-        </ul>
+         </ul> <li class="nav-item">
+            <a class="nav-link" id ="cats"data-toggle="tab" href="#education">Education Pitches</a>
+          </li>
     </div>
     <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_authenticated %}
