--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -2,13 +2,11 @@
 {% extends 'bootstrap/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 {% import 'macros.html' as macro %}
-{% block content %}
-
 <div class="row">
     <div class="card">
-        <div class="card-body text-center">
+        <div class="card-body text-center"> 
             <h4><a>{{pitch.title}}</a></h4>
-            <h5 class="card-text text-center">{{pitch.description}}.</h5>
+            <h5 class="card-text text-center">{{pitch.comment}}.</h5>
         </div>
     </div>
     <div class="container">
