--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
   <div class="container">
     <h3 style="color: green;text-align: center">Pitch Categories</h3>
     <br>
-    <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
+    <!-- <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" data-toggle="tab" href="#love">Love</a>
       </li>
@@ -23,7 +23,7 @@
       <li class="nav-item">
         <a class="nav-link" data-toggle="tab" href="#promotion">Promotion</a>
       </li>
-    </ul>
+    </ul> -->
 
     <div class="tab-content">
       <div class="container tab-pane active"><br>
