--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -12,11 +12,8 @@
 					<footer class="blockquote-footer"> Posted by {{category.user_id.username}}</footer>
 				</blockquote>
 
-				<a href="{{url_for('main.post_comment',pitch_id = category.id)}}" class="btn btn-info"> Add a comment</a>
-				<a href="{{url_for('main.upvote',pitch_id = category.id)}}" class="btn btn-primary btn-sm"><i></i>Upvote
-					<span>{{category.upvotes.count()}}</span></a>
-				<a href="{{url_for('main.downvote',pitch_id = category.id)}}" class="btn btn-danger btn-sm"><i
-						class="far fa-thumbs-up"></i>Downvote <span>{{category.downvotes.count()}}</span></a>
+				<a href="{{url_for('main.new_comment',pitch_id = category.id)}}" class="btn btn-info"> Add a comment</a>
+				
 			</div>
 		</div>
 
