--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-dark bg-primary" role="navigation">
+<div class="navbar navbar-dark bg-success" role="navigation">
   <div class="container">
       <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,17 +7,35 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <ul>
-          <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/pitches/new/"> Post a Pitch </a>
-          </ul>
+         
       </div>
       <div class="navbar-nav">
           <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/"> Home </a>
-
       </div>
-
+      <div>
+        <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/pitches/new"> Post a Pitch </a>
+      </div>
+          <div>
+            <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#love">Love</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#education">Education</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#business">Business</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#interview">Interview</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#promotion">Promotion</a>
+              </li>
+            </ul>
+          </div>
       <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right" style="margin-right: 70px;">
         {% if current_user.is_authenticated %}
         <li><a href="{{url_for('main.profile',name=current_user.username)}}">Profile</a></li>
         <li style="color:whitesmoke">{{current_user.username}}</li>
