--- a/app/templates/business.html
+++ b/app/templates/business.html
@@ -12,7 +12,7 @@
   </div>
     <hr>
     <div class="row">
-        {{macro.displayPitches(business)}}
+        {{macro.display(business)}}
     </div>
 </div>
 {%endblock%}
