--- a/app/templates/interview.html
+++ b/app/templates/interview.html
@@ -9,7 +9,7 @@
   </div>
     <hr>
     <div class="row">
-        {{macro.displayPitches(interview)}}
+        {{macro.display(interview)}}
     </div>
 </div>
 {%endblock%}
