--- a/app/templates/promotion.html
+++ b/app/templates/promotion.html
@@ -4,12 +4,12 @@
 {%block content%}
 <div class="jumbotron jumbotron-fluid">
     <div class="container text-center">
-      <h2 class="card-title h1-responsive font-bold">Promotion Pitches</h2>
+      <h2 class="card-title h1-responsive font-bold">Promotion</h2>
     </div>
   </div>
     <hr>
     <div class="row">
-        {{macro.displayPitches(Promotion)}}
+        {{macro.display(promotion)}}
     </div>
 </div>
 {%endblock%}
