--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,14 +2,15 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container">
+<div class="container" style="background-color: blue ;">
     <div class="row">
         <div class="col-md-2"> </div>
-        <div class="col-md-8">
-            {{wtf.quick_form(registration_form)}}
+        <div class="card">
+            <div class="col-md-8">
+                {{wtf.quick_form(registration_form)}}
+            </div>
         </div>
         <div class="col-md-2"></div>
     </div>
 </div>
-
 {% endblock%}
