--- a/app/templates/love.html
+++ b/app/templates/love.html
@@ -9,7 +9,7 @@
   </div>
     <hr>
     <div class="row">
-        {{macro.displayPitches(love)}}
+        {{macro.display(love)}}
     </div>
 </div>
 {%endblock%}
