--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,32 +1,34 @@
 {% macro display(category_list) %}
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Viaoda+Libre&display=swap" rel="stylesheet">
 <div class="row">
 	{% if category_list %}
 	{% for category in category_list %}
-	<div class="col-md-6">
+	<div class="col-md-6" style="background-color: burlywood;">
 		<div class="thumbnail text-center">
-			<h5 class="card-header">{{category.title}}</h5>
-			<h5 class="card-header">{{category.category}}</h5>
+			<h3 class="card-header" >{{category.title }}</h3>
+			<h5 class="card-header" style="font-style: italic; font-size: large;font-weight: bolder;">{{category.category}}</h5>
 			<div class="card-body">
 				<blockquote class="blockquote mb-0">
-					<h2>{{category.description}}</h2>
-					<footer class="blockquote-footer"> Posted by {{category.user_id.username}}</footer>
+					<h2 style="font-family: Viaoda Libre;">{{category.description}}</h2>
+					<footer class="blockquote-footer"> Posted by {{category.user.username}} <br> <strong><em>{{category.date_posted}}</em></strong></footer>
 				</blockquote>
 
-				<a href="{{url_for('main.new_comment',pitch_id = category.id)}}" class="btn btn-info"> Add a comment</a>
-				
+				<a href="{{url_for('main.new_comment',pitch_id = category.id)}}" class="btn btn-success">Comment</a>
+				<a href="{{url_for('main.index',pitch_id = category.id)}}" class="btn btn-primary btn-sm"><i></i>Like
+					<span></span></a>
+				<a href="{{url_for('main.index',pitch_id = category.id)}}" class="btn btn-warning btn-sm"><i
+						class="far fa-thumbs-up"></i>Dislike<span</span></a>
 			</div>
 		</div>
-
 	</div>
 	{% endfor %}
 	{% else %}
 	{% endif %}
 </div>
 {% endmacro %}
-
 {% macro displayComment(comments) %}
 <ul>
-
 	{% if comments %}
 	{% for comment in comments %}
 	<div class="row text-center">
@@ -38,7 +40,7 @@
 	{% endfor %}
 	{% else %}
 
-	<h3>This post does not does not have any comments yet !</h3>
+	<h3>Be the first to comment on this Pitch !</h3>
 	{%endif%}
 </ul>
 {% endmacro %}
