--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,57 +1,53 @@
-<div class="navbar navbar-dark bg-success" role="navigation">
-  <div class="container">
+<div class="container-fluid" style="background-color: cadetblue; font-style: normal;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: large;margin-right: 50px;">
+  <div class="navbar navbar-dark " role="navigation">
+    <div class="container">
       <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-         
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+        </button>
+
       </div>
       <div class="navbar-nav">
-          <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/"> Home </a>
+        <div class="text text-primary">
+          <a style="text-align: center; color: blue;" class="navbar-brand" href="/"> Home </a>
+         
+          <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" style="color: blue;" href="#love">Love</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" style="color: blue;" href="#education">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" style="color: blue;" href="#business">Business</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" style="color: blue;" href="#interview">Interview</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" style="color: blue;" href="#promotion">Promotion</a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right" style="margin-right: 70px;">
+            {% if current_user.is_authenticated %}
+            <li><a href="{{url_for('main.profile',name=current_user.username)}}">Profile</a></li>
+            <li style="color: red">{{current_user.username}}</li>
+            <li><a style="color: blue;" href="{{url_for('auth.logout')}}">Sign out</a></li>
+            {% else %}
+            <li><a style="color: blue;" href="{{url_for('auth.login')}}">Sign in</a></li>
+            {%endif%}
+          </ul>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a style="color: blue;" href="{{url_for('auth.logout')}}"></a></li>
+            <li><a style="color: blue;" href="{{url_for('auth.login')}}"></a></li>
+          </ul>
+        </div>
+
       </div>
-      <div>
-        <a style="text-align: center; color: whitesmoke;" class="navbar-brand" href="/pitches/new"> Post a Pitch </a>
-      </div>
-          <div>
-            <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#love">Love</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#education">Education</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#business">Business</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#interview">Interview</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#promotion">Promotion</a>
-              </li>
-            </ul>
-          </div>
-      <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right" style="margin-right: 70px;">
-        {% if current_user.is_authenticated %}
-        <li><a href="{{url_for('main.profile',name=current_user.username)}}">Profile</a></li>
-        <li style="color:whitesmoke">{{current_user.username}}</li>
-        <li><a style="color: whitesmoke;"  href="{{url_for('auth.logout')}}">Sign out</a></li>
-        {% else %}
-        <li><a style="color: whitesmoke;" href="{{url_for('auth.login')}}">Sign in</a></li>
-        {%endif%}
-      </ul>
     </div>
-    <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li style="color:whitesmoke"></li>
-          <li><a style="color: whitesmoke;"  href="{{url_for('auth.logout')}}"></a></li>
-          <li><a style="color: whitesmoke;" href="{{url_for('auth.login')}}"></a></li>
-        </ul>
-      </div>
-    
-</div>
-</div>
+  </div>
