change bg color

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,20 +3,44 @@
 {% block navbar %}
 {% include 'navbar.html'%}
 {%endblock%}
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 {%block content%}
-  <div class="container" style="margin-right: 75px; margin-top: 2px;" >
-    <h3 style="color: green;text-align: center">{{title}} <br>
-      <a style="text-align: center; color: blue;" class="navbar-brand" href="/pitches/new"> Add Pitch </a>
-    </h3>
-    <br>
-    <div class="tab-content">
-      <div class="container tab-pane active"><br>
-        {{ macro.display(love)}}
-        {{ macro.display(education) }}
-        {{ macro.display(business)}}
-        {{ macro.display(promotion) }}
-        {{ macro.display(interview) }}
-      </div>
+<div class="container" style="margin-right: 75px; margin-top: 2px;">
+  <h3 style="color: green;text-align: center">{{title}} <br>
+    <a style="text-align: center; color: blue;" class="navbar-brand" href="/pitches/new"> Add Pitch </a>
+  </h3>
+  <br>
+  <hr>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+  <div class="tab-content">
+    <div class="container tab-pane active"><br>
+      <h2 style="color: green; text-align: center;font-family: Kaushan Script;">Love Pitches</h2>
+      {{ macro.display(love)}}
+      <a style="text-align: center; color: blue; align-items: center;" class="navbar-brand" href="/pitches/new"> Add
+        Pitch </a>
+      <hr>
+      <h2 style="color: green; text-align: center;font-family: Kaushan Script;">Education Pitches</h2>
+      {{ macro.display(education) }}
+      <a style="text-align: center; color: blue; align-items: center;" class="navbar-brand" href="/pitches/new"> Add
+        Pitch </a>
+      <hr>
+      <h2 style="color: green; text-align: center;font-family: Kaushan Script;">Business Pitches</h2>
+      {{ macro.display(business)}}
+      <a style="text-align: center; color: blue; align-items: center;" class="navbar-brand" href="/pitches/new"> Add
+        Pitch </a>
+      <hr>
+      <h2 style="color: green; text-align: center;font-family: Kaushan Script;">Promotion Pitches</h2>
+      {{ macro.display(promotion) }}
+      <a style="text-align: center; color: blue; align-items: center;" class="navbar-brand" href="/pitches/new"> Add
+        Pitch </a>
+      <hr>
+      <h2 style="color: green; text-align: center;font-family: Kaushan Script;">Interview Pitches</h2>
+      {{ macro.display(interview) }}
+      <a style="text-align: center; color: blue; align-items: center;" class="navbar-brand" href="/pitches/new"> Add
+        Pitch </a>
+      <hr>
     </div>
   </div>
-{%endblock%}
+  {%endblock%}
