--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container" style="background-color: blue;"> 
+<div class="container" style="background-color: purple;"> 
     <div class="row">
       <div class= "col-md-2"> </div>
       <div class="col-md-8">
@@ -15,7 +15,7 @@
       {% endfor %}
       <!-- Login form -->
       {{wtf.quick_form(login_form)}}
-      <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
+      <p > Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
      </div>
      <div clas="col-md-2"> </div>
     </div>
