--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,7 +2,7 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container" style="background-color: blue ;">
+<div class="container" style="background-color: purple;">
     <div class="row">
         <div class="col-md-2"> </div>
         <div class="card">
