--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="row">
             <div class="jumbotron">
-                {{wtf.quick_form(form)}}
+                {{wtf.quick_form(comment_form)}}
             </div>
         </div>
     </div>
